--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -2,5 +2,6 @@
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
 	unreliable: marks tests as unreliable (deselect with '-m "not unreliable"')
+	generate: marks database generation tests (deslect with '-m "not generate"')
 testpaths =
 	unit
