--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -22,7 +22,11 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name test-env
+        cd tests
+        conda env update --file environment.yml --name test-env
+        cd ..
     - name: Test with pytest
       run: |
         conda install pytest
-        pytest -m not (generate or unreliable)
+        cd tests
+        python run_tests.py --all
