--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         conda env update --file environment.yml --name test-env
     - name: Test with pytest
-      working-directory: ./tests
+      working-directory: tests
       run: |
         conda env update --file environment.yml --name test-env
         conda install pytest
