--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Test with pytest
       working-directory: tests
       run: |
-        conda env update --file environment.yml --name test-env
-        conda install pytest
+        conda install pip
+        pip install -r requirements.txt
         python run_tests.py --all
