--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -27,4 +27,4 @@ jobs:
       run: |
         conda install pip
         pip install -r requirements.txt
-        python run_tests.py --all
+        python run_tests.py --all --no-report
