--- a/.github/workflows/pytest-unit-tests.yml
+++ b/.github/workflows/pytest-unit-tests.yml
@@ -22,9 +22,12 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name test-env
-    - name: Test with pytest
+    - name: Install test dependencies
       working-directory: tests
       run: |
         conda install pip
         pip install -r requirements.txt
+    - name: Test with pytest
+      working-directory: tests
+      run: |
         python run_tests.py --all --no-report
