--- a/.github/workflows/pytest-unit-tests.yml
+++ b/.github/workflows/pytest-unit-tests.yml
@@ -22,6 +22,10 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name test-env
+    - name: Install desktop_shop
+      run: |
+        conda install pip
+        pip install -e .
     - name: Install test dependencies
       working-directory: tests
       run: |
