--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
     hooks:
     -   id: pylint
         language_version: python3
-        args: [--fail-under=9]
+        args: [--fail-under=9, --disable=import-error]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910-1
