--- a/.github/workflows/pytest-unit-tests.yml
+++ b/.github/workflows/pytest-unit-tests.yml
@@ -27,10 +27,9 @@ jobs:
         conda install pip
         pip install -e .
     - name: Install test dependencies
-      working-directory: tests
       run: |
         conda install pip
-        pip install -r requirements.txt
+        pip install -r dev-requirements.txt
     - name: Test with pytest
       working-directory: tests
       run: |
