Fix gui tests for headless server

--- a/.github/workflows/pytest-unit-tests.yml
+++ b/.github/workflows/pytest-unit-tests.yml
@@ -27,9 +27,11 @@ jobs:
         conda install pip
         pip install -e .
     - name: Install test dependencies
+    # sudo apt-get install xvfb x11-utils gnumeric required for gui tests running in headless mode
       run: |
         conda install pip
         pip install -r dev-requirements.txt
+        sudo apt-get install xvfb x11-utils gnumeric
     - name: Test with pytest
       working-directory: tests
       run: |
