--- a/.github/workflows/pytest-unit-tests.yml
+++ b/.github/workflows/pytest-unit-tests.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Test with pytest
       working-directory: tests
       run: |
-        python run_tests.py --all --no-report
+        pytest .
