--- a/.github/workflows/pip-test.yml
+++ b/.github/workflows/pip-test.yml
@@ -25,3 +25,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools
           pip install $PACKAGE_NAME
+          python -m desktop_shop.database.database generate --minimal --fast
